# security-checker

./: .gitignore  Dockerfile  README.md  alembic.ini  app.py  docker-compose.yml  pyproject.toml
auth/domain/: oauth.py
db/: env.py
db/models/: __init__.py
db/versions/: 2ea5e9ed409f_init.py
docs/: Architecture.md
migrations/: 1f380a846223_init.py
security_checker/: app.py  config.py
security_checker/blueprints/api/v1/: __init__.py
security_checker/blueprints/api/v1/users/: views.py
security_checker/blueprints/api/v1/vulnerabilities/: views.py
security_checker/blueprints/webhook/: views.py
security_checker/domain/: changes.py  checker.py  config.py  diff_packages.py  result.py
security_checker/domain/dir/: file.py  temp_repo.py
security_checker/domain/vsc/: __init__.py  github.py
tests/: test_checker.py  test_diff_packages.py  test_github.py  test_security_checker.py
tests/fixtures/: github_diff.diff  github_webhook.json  package-lock.json  package.json
