[tool.poetry]
name = "security-checker"
version = "0.1.0"
description = ""
authors = ["Denis Korobitsin <deniskorobicyn@users.noreply.github.com>"]

[tool.poetry.dependencies]
python = "^3.10"
Flask = "^2.1.3"
PyGithub = "^1.55"
cryptography = "^37.0.4"
unidiff = "^0.7.4"
GitPython = "^3.1.27"
safety = "^2.1.1"
Authlib = "^1.1.0"
flask-sqlalchemy = "^3.0.2"
Flask-Alembic = "^2.0.1"
psycopg2 = "^2.9.5"

[tool.poetry.dev-dependencies]
pytest = "^7.1.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
